--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,26 +4,10 @@
 # Then, it will take the latest netboot from the internet
 # And configure the relevant files for it
 
-- name: Ensure existence of dummy ethernet interface
-  ansible.builtin.import_tasks: install-dummy-interface.yml
-
-- name: Include pi-hole installation and configuration tasks
-  ansible.builtin.import_tasks: pi-hole.yml
-  when: do_pihole == "yes"
-
-# - name: Ensure cron-job for pihole-update is present
-#   ansible.builtin.cron:
-#     name: "Update pi-hole"
-#     weekday: "4" #Thursday
-#     minute: "0"
-#     hour: "3"
-#     user: pihole
-#     job: "pihole -up"
-
 - name: Ensure TFTPD is present on the system
   ansible.builtin.import_tasks: install-tftpd.yml
 
-# I am assuming pi-hole is now active on this machine, which depends on this
+# I am assuming a webserver is now active on this machine, which depends on this
 # directory to host its admin interface. We'll piggyback our preseed.cfg onto it
 - name: Ensure /var/www/html exists
   ansible.builtin.file:
